# portable-agentic-toolkit

./: .env.example  .gitattributes  .gitignore  README.md  app.py  bootstrap.bat  bootstrap.sh  chainlit.md  main.py  pyproject.toml
.chainlit/: config.toml
.github/workflows/: ci.yml  release.yml
agents/: crew.py  runner.py
api/: chat.py  server.py
config/: agents.yaml  mcp_catalog.yaml
db/: chainlit_data.py  database.py  queries.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: HitlButtons.tsx  InputBar.tsx  Message.tsx  SettingsDrawer.tsx  Sidebar.tsx
frontend/src/hooks/: useChat.ts
mcp_tools/: installer.py  registry.py  scheduler_tools.py
public/: config.js  mcp_ui.html  outputs_ui.html  schedules_ui.html  sidebar.css  sidebar.js  wizard_ui.html
scheduler/: engine.py
scripts/: git_export.py  pull_models.py
utils/: logger.py  ollama_utils.py
